[package]
name = "xu4fan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.12", features = ["derive"], optional = true }
glob = { version = "0.3.0", optional = true }

[features]
binary = ["clap", "glob"]

[lib]
name = "xu4fan"
path = "src/lib.rs"

[[bin]]
name = "xu4fan"
path = "src/main.rs"
required-features = ["binary"]
